Raise test coverage and clear Sonar findings (#97)