@@ -4,7 +4,6 @@ import com.czertainly.api.model.common.attribute.v2.content.BaseAttributeContent
 import com.czertainly.api.model.common.attribute.v2.content.StringAttributeContentV2;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public enum SLHDSASignatureMode {
@@ -23,9 +22,9 @@ public enum SLHDSASignatureMode {
         return parameterName;
     }
 
-    public static List<BaseAttributeContentV2> asStringAttributeContentList() {
+    public static List<BaseAttributeContentV2<?>> asStringAttributeContentList() {
         return Stream.of(values())
-                .map(d -> new StringAttributeContentV2(d.name()))
-                .collect(Collectors.toList());
+                .<BaseAttributeContentV2<?>>map(d -> new StringAttributeContentV2(d.name()))
+                .toList();
     }
 }
